[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/BuildingBlock1.gd" type="Script" id=2]

[node name="BuildingBlock1" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="PlayerNode"]

[node name="EnemySpawnPoints" type="Node2D" parent="."]

[node name="MainTileMap" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 261
format = 1

[node name="OneWayBlocks" type="TileMap" parent="."]
format = 1

[node name="StaticBody2D" type="StaticBody2D" parent="OneWayBlocks"]
collision_layer = 2048
collision_mask = 0

[node name="Decorations" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="ControlZone" type="StaticBody2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

[node name="CameraLimits" type="Node2D" parent="."]

[node name="TopRIght" type="Position2D" parent="CameraLimits"]

[node name="BottomLeft" type="Position2D" parent="CameraLimits"]
